--- a/package.json
+++ b/package.json
@@ -1,54 +1,70 @@
 {
-  "name": "sustainablebtc.org",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "@hubspot/api-client": "^11.1.0",
-    "@next/font": "^13.4.9",
-    "@portabletext/react": "^3.0.4",
-    "@sanity/image-url": "^1.0.2",
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "axios": "^1.6.8",
-    "bootstrap-icons": "^1.10.5",
-    "emailjs-com": "^3.2.0",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "isotope-layout": "^3.0.6",
-    "lottie-web": "^5.12.2",
-    "next": "13.4.9",
-    "next-nprogress-bar": "^2.0.3",
-    "next-sanity": "^5.1.1",
-    "next-sanity-image": "^6.1.0",
-    "plyr": "^3.7.8",
-    "react": "^18.2.0",
-    "react-compare-slider": "^2.2.0",
-    "react-dom": "18.2.0",
-    "react-modal": "^3.16.1",
-    "react-modal-video": "^2.0.2",
-    "react-tsparticles": "^2.10.1",
-    "sanity": "^3.14.1",
-    "swiper": "^10.3.1",
-    "tsparticles": "^2.10.1",
-    "typescript": "5.1.6",
-    "validator": "^13.11.0"
-  },
-  "devDependencies": {
-    "@types/isotope-layout": "^3.0.13",
-    "@types/react-modal": "^3.16.3",
-    "@types/react-modal-video": "^1.2.3",
-    "@types/validator": "^13.11.9",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.25",
-    "sass": "^1.63.6",
-    "tailwindcss": "^3.3.2"
-  }
+   "name": "sustainablebtc.org",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "bot-crawl": "tsx ./ai/chatbot/scripts/crawl_site.ts",
+      "bot-chunk": "tsx ./ai/chatbot/scripts/crawl_and_chunk.ts",
+      "bot-embed": "tsx ./ai/chatbot/scripts/embed_and_index.ts"
+   },
+   "dependencies": {
+      "@emailjs/browser": "^3.11.0",
+      "@hubspot/api-client": "^11.1.0",
+      "@next/font": "^13.4.9",
+      "@portabletext/react": "^3.0.4",
+      "@qdrant/js-client-rest": "^1.16.2",
+      "@sanity/image-url": "^1.0.2",
+      "@types/node": "20.4.1",
+      "@types/react": "18.2.14",
+      "@types/react-dom": "18.2.6",
+      "axios": "^1.6.8",
+      "bootstrap-icons": "^1.10.5",
+      "cheerio": "^1.1.2",
+      "dotenv": "^17.2.3",
+      "emailjs-com": "^3.2.0",
+      "eslint": "8.44.0",
+      "eslint-config-next": "13.4.9",
+      "isotope-layout": "^3.0.6",
+      "jszip": "^3.10.1",
+      "lottie-web": "^5.12.2",
+      "mammoth": "^1.11.0",
+      "next": "13.4.9",
+      "next-nprogress-bar": "^2.0.3",
+      "next-sanity": "^5.1.1",
+      "next-sanity-image": "^6.1.0",
+      "node-fetch": "^3.3.2",
+      "nodemon": "^3.1.11",
+      "openai": "^6.10.0",
+      "pdf-parse": "^2.4.5",
+      "plyr": "^3.7.8",
+      "puppeteer": "^24.32.0",
+      "qdrant": "^1.3.1",
+      "react": "^18.2.0",
+      "react-compare-slider": "^2.2.0",
+      "react-dom": "18.2.0",
+      "react-modal": "^3.16.1",
+      "react-modal-video": "^2.0.2",
+      "react-tsparticles": "^2.10.1",
+      "sanity": "^3.14.1",
+      "swiper": "^10.3.1",
+      "ts-node": "^10.9.2",
+      "tsparticles": "^2.10.1",
+      "tsx": "^4.21.0",
+      "typescript": "^5.1.6",
+      "validator": "^13.11.0"
+   },
+   "devDependencies": {
+      "@types/isotope-layout": "^3.0.13",
+      "@types/react-modal": "^3.16.3",
+      "@types/react-modal-video": "^1.2.3",
+      "@types/validator": "^13.11.9",
+      "autoprefixer": "^10.4.14",
+      "postcss": "^8.4.25",
+      "sass": "^1.63.6",
+      "tailwindcss": "^3.3.2"
+   }
 }
